Drop report caching functionality and endpoints
Saving rendered template outputs was never a part of the original CDOGS
design, and could potentially yield privacy issues. This commit drops the
ability to request caching resultant reports.
